--- a/config
+++ b/config
@@ -1,2 +1,2 @@
 
---no-mtime -o /data/data/com.termux/files/home/storage/shared/Youtube/
+--no-mtime -o /data/data/com.termux/files/home/storage/shared/Youtube/.%(ext)s
